@@ -1,3 +1,10 @@
+2022-07-02T08:09:15Z:
+* notice: last 14d: unq all: 1 23
+* notice: prev accum: outdated-unq outdated-all / unq all: 103 1661 / 107 1702
+* notice: next accum: outdated-unq outdated-all / unq all: 103 1661 / 107 1684
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -18 / +1 +22 -0 -18 / 1 4
+* notice: removed / changed dates: [] / [2022-06-18]
+
 2022-06-30T16:10:03Z:
 * notice: last 14d: unq all: 1 41
 * notice: prev accum: outdated-unq outdated-all / unq all: 102 1645 / 107 1693
